po: update po/uk_UA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/uk_UA/common-base.po
+++ b/po/uk_UA/common-base.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-08 12:02+0000\n"
+"PO-Revision-Date: 2017-03-10 05:18+0000\n"
 "Last-Translator: Євген Шульга <yevhen.shulha@gmail.com>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/civicrm/civicrm/language/uk/)\n"
 "MIME-Version: 1.0\n"
@@ -9785,7 +9785,7 @@ msgstr "ID внеску"
 #: CRM/Core/SelectValues.php
 #: templates/CRM/Contact/Form/Search/Custom/FullText.tpl
 msgid "Fee Amount"
-msgstr "Сума внеску"
+msgstr "Комісія"
 
 #: CRM/Core/SelectValues.php
 msgid "Net Amount"
