--- a/po/sv_SE/report.po
+++ b/po/sv_SE/report.po
@@ -5,6 +5,7 @@
 # Translators:
 # Isak Bergdahl <jahve@rocketmail.com>, 2013-2014
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
+# Magnus Gröndahl <mangegrd@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2016
 # Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2011-2012,2014-2016
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-12 15:54+0000\n"
-"Last-Translator: Thomas Nilefalk <thomas.nilefalk@responsive.se>\n"
+"PO-Revision-Date: 2017-03-09 23:42+0000\n"
+"Last-Translator: Magnus Gröndahl <mangegrd@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,31 +36,31 @@ msgstr "Titel för rapportinstansen"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report template ID"
-msgstr ""
+msgstr "Rapportmall ID"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report instance Name"
-msgstr ""
+msgstr "Rapport instans namn"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Arguments"
-msgstr ""
+msgstr "Rapport Instans argument"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance description"
-msgstr ""
+msgstr "Rapport Instans beskrivning"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Permissions"
-msgstr ""
+msgstr "Rapport Instans behörighet"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Assigned to Roles"
-msgstr ""
+msgstr "Report Instance Assigned to Roles"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance is Active"
-msgstr ""
+msgstr "Rapport Instans är aktivt"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Created By"
@@ -75,23 +76,23 @@ msgstr ""
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Email Report Instance To"
-msgstr ""
+msgstr "E-postrapport instans till"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "cc Email Report Instance To"
-msgstr ""
+msgstr "cc E-postrapport instans till"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Header"
-msgstr ""
+msgstr "Rapport instans Sidhuvud"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Footer"
-msgstr ""
+msgstr "Rapport instans Sidfot"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Drilldown Report ID"
-msgstr ""
+msgstr "Prioriteringsrapport ID"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Instance is Reserved"
