--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -9,6 +9,7 @@
 # JoeMurray <joe.murray@jmaconsulting.biz>, 2013
 # JoeMurray <joe.murray@jmaconsulting.biz>, 2013
 # lavamind <jerome@riseup.net>, 2011,2016
+# Mathieu B <mathieu@brab.ca>, 2017
 # Mathieu Lu <mathieu@bidon.ca>, 2011-2012,2014-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
@@ -25,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-05 20:54+0000\n"
-"Last-Translator: Rick Paré\n"
+"PO-Revision-Date: 2017-03-10 16:11+0000\n"
+"Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3898,7 +3899,7 @@ msgstr "Chemin ou les fichiers temporaires CiviCRM sont chargés - par ex: les f
 msgid ""
 "File system path where image files are uploaded. Currently, this path is "
 "used for images associated with premiums (CiviContribute thank-you gifts)."
-msgstr "Chemin du répertoire où les images sont chargées. Actuellement, ce chemin est utiisé pour les images associées avec les Cadeaux (CiviContribute)."
+msgstr "Chemin du répertoire où les images sont chargées. Actuellement, ce chemin est utilisé pour les images associées avec les Cadeaux (CiviContribute)."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
