--- a/po/uk_UA/common-base.po
+++ b/po/uk_UA/common-base.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-10 05:18+0000\n"
+"PO-Revision-Date: 2017-03-10 06:15+0000\n"
 "Last-Translator: Євген Шульга <yevhen.shulha@gmail.com>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/civicrm/civicrm/language/uk/)\n"
 "MIME-Version: 1.0\n"
@@ -17643,7 +17643,7 @@ msgstr "Коли"
 
 #: templates/CRM/Core/Calendar/Rss.tpl
 msgid "through"
-msgstr "протягом"
+msgstr "до"
 
 #: templates/CRM/Core/Calendar/Rss.tpl
 msgid "Where"
