po: update po/sr_RS@latin/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/drupal-civicrm.po
+++ b/po/sr_RS@latin/drupal-civicrm.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2017-03-01 14:16+0000\n"
+"PO-Revision-Date: 2017-03-10 13:57+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -469,7 +469,7 @@ msgstr ""
 msgid ""
 "read about <a href=\"!1\">CiviCRM access permissions</a> and set access "
 "permissions at <a href=\"!2\">Administer CiviCRM &raquo; Access Control</a>."
-msgstr ""
+msgstr "pročitajte o <a href=\"!1\">CiviCRM dozvolama pristupa</a> i podesite dozvole pristupa u <a href=\"!2\">Administracija CiviCRMa &raquo; Kontrola pristupa</a>."
 
 #: drupal/civicrm.module
 msgid ""
@@ -495,27 +495,27 @@ msgstr "import kontakata iz drugih izvora na <a href=\"!1\">Import kontakata</a>
 msgid ""
 "create or administer tags (e.g. organizer, foundation, environment...) at <a"
 " href=\"!1\">CiviCRM &raquo; Administer &raquo; Tags</a>."
-msgstr ""
+msgstr "Kreirajte i administrirajte tagove (npr. organizator/ka, fondacija, okruženje...) u <a href=\"!1\">CiviCRM &raquo; Administracija &raquo; Tagovi</a>."
 
 #: drupal/civicrm.module
 msgid ""
 "create or administer relationship types (e.g. household member, board "
 "member, spouse...) <a href=\"!1\">CiviCRM &raquo; Administer &raquo; "
 "Relationship Types</a>."
-msgstr ""
+msgstr "Kreirajte i administrirajte tipove veza (npr. član domaćinstva, član odbora, suprug/a...) <a href=\"!1\">CiviCRM &raquo; Administracija &raquo; Tipovi veza</a>."
 
 #: drupal/civicrm.module
 msgid ""
 "create or administer location types (e.g. home, work, school...) <a "
 "href=\"!1\">CiviCRM &raquo; Administer &raquo; Location Types</a>."
-msgstr ""
+msgstr "Kreirajte i administrirajte tipove lokacija (npr. kuća, posao, škola...) u <a href=\"!1\">CiviCRM &raquo; Administracija &raquo; Tipovi lokacija</a>."
 
 #: drupal/civicrm.module
 msgid ""
 "create or administer activity types (e.g. house meeting, intake "
 "interview...) at <a href=\"!1\">CiviCRM &raquo; Administer &raquo; Activity "
 "Types</a>."
-msgstr ""
+msgstr "Kreirajte i administrirajte tipove aktivnosti (npr. interni sastanak, intervju...) <a href=\"!1\">CiviCRM &raquo; Administracija &raquo; Tipovi aktivnosti</a>."
 
 #: drupal/civicrm.module
 msgid ""
@@ -529,7 +529,7 @@ msgid ""
 "create or administer CiviCRM profiles (i.e. what contact data is collected "
 "during user registration and included in My Account) at <a "
 "href=\"!1\">CiviCRM &raquo; Administer &raquo; CiviCRM Profiles</a>."
-msgstr ""
+msgstr "Kreirajte i administrirajte CiviCRM profile (npr. koji podaci se prikupljaju tokom registracije korisnika i uključuju u Moj nalog) u <a href=\"!1\">CiviCRM &raquo; Administracija &raquo; CiviCRM profili</a>."
 
 #: drupal/civicrm.module
 msgid ""
