--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -11,7 +11,8 @@
 # Cristian Schalper <crschalper@gmail.com>, 2015
 # David Cereceto Martínez <dcereceto@gmail.com>, 2015
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2014-2015
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2014-2015
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2017
 # Fran Sanchez <fsanchezmac@gmail.com>, 2013
 # ixiam <info@ixiam.com>, 2013,2015-2017
 # ixiam <info@ixiam.com>, 2011
@@ -33,8 +34,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-08 18:51+0000\n"
-"Last-Translator: Jorge Marino <jorgemarinosanchez@gmail.com>\n"
+"PO-Revision-Date: 2017-03-14 11:02+0000\n"
+"Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1445,7 +1446,7 @@ msgstr "Opciones de Referencia de Conacto"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "mail()"
-msgstr "correo()"
+msgstr "mail()"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "SMTP"
@@ -1453,7 +1454,7 @@ msgstr "SMTP"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Sendmail"
-msgstr "Enviarcorreo"
+msgstr "Sendmail"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Disable Outbound Email"
