po: update po/ca_ES/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/campaign.po
+++ b/po/ca_ES/campaign.po
@@ -5,12 +5,13 @@
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # Francesc Bassas i Bullich <francesc@babu.cat>, 2014-2017
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2017
 # ixiam <info@ixiam.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-21 10:01+0000\n"
+"PO-Revision-Date: 2017-03-15 23:08+0000\n"
 "Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -513,7 +514,7 @@ msgstr[1] ""
 #: CRM/Campaign/Form/Task/Reserve.php
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
 msgid "Add respondent(s) to existing group(s)"
-msgstr "Afegir enquestat(s) a grup(s) existents "
+msgstr "Afegir enquestats a grups existents "
 
 #: CRM/Campaign/Form/Task/Reserve.php
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
