--- a/po/ca_ES/menu.po
+++ b/po/ca_ES/menu.po
@@ -4,9 +4,10 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # erich <edu@edurichard.com>, 2013
-# francescbassas <francesc@babu.cat>, 2013-2016
-# francescbassas <francesc@babu.cat>, 2013
-# francescbassas <francesc@babu.cat>, 2012-2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013-2016
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2012-2013
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2017
 # ixiam <info@ixiam.com>, 2016
 # Jaume Planas <jaumeplan@gmail.com>, 2011
 # Marti Prat <m.prat@ixiam.com>, 2013
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-24 13:23+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-03-15 23:40+0000\n"
+"Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -792,7 +793,7 @@ msgstr "Cerca avançada"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Search Builder"
-msgstr "Generador de cerques"
+msgstr "Constructor de cerques"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2214,17 +2215,17 @@ msgstr "Els meus informes"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr "Detalls de l'activitat"
+msgstr "Detalls d'activitat"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr "Resum de l'activitat"
+msgstr "Resum d'activitat"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr "Mostrar estadístiques de l'activitat per tipus / data"
+msgstr "Mostra estadístiques d'activitat per tipus / data "
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
