--- a/po/ca_ES/drupal-civicrm.po
+++ b/po/ca_ES/drupal-civicrm.po
@@ -4,15 +4,16 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2013
-# francescbassas <francesc@babu.cat>, 2013-2017
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2013-2017
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2017
 # ixiam <info@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2017-01-19 17:29+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-03-15 23:35+0000\n"
+"Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1177,7 +1178,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source"
-msgstr "Font"
+msgstr "Orígen"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Where did this registration come from?"
@@ -1553,7 +1554,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source Contact"
-msgstr "Font del contacte"
+msgstr "Contacte orígen"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who scheduled this activity"
@@ -1809,7 +1810,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source of the relationship"
-msgstr "Font de la relació"
+msgstr "Orígen de la relació"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Status"
